--- a/opencoverage/opencoverage.css
+++ b/opencoverage/opencoverage.css
@@ -3,6 +3,9 @@
   padding: 0;
 }
 
+html, body {
+}
+
 header {
   padding: 0 1em;
   color: white;
@@ -56,7 +59,5 @@ nav ul li a {
 
 #map {
   background-color: #333;
-  height: 500px;
 }
-
 
